[package]
name = "julian_day_converter"
authors = ["Neil Gardner"]
version = "0.1.0"
edition = "2021"
description = "Provides Julian Day conversion methods for chrono::NaiveDateTime and direct conversion to and from unix timestamps as well as fuzzy ISO date-time parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31" 