[package]
name = "julian_day_converter"
authors = ["Neil Gardner"]
version = "0.1.7"
edition = "2021"
description = "Provides Julian Day conversion methods for chrono::NaiveDateTime and direct conversion to and from unix timestamps as well as a supplementary fuzzy ISO date-time parser"
repository = "https://github.com/neilg63/julian_day_converter"
categories = ["date-and-time"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31" 