[package]
name = "julian_day_converter"
authors = ["Neil Gardner"]
version = "0.4.3"
edition = "2021"
description = "Provides Julian Day conversion methods for chrono::NaiveDateTime and direct conversion to and from unix timestamps"
repository = "https://github.com/neilg63/julian_day_converter"
categories = ["date-and-time"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.31", default-features = false }

